# ray-tracer-glsl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: application.h  gl_debug.h  shader.h  utils.h
libs/glad/include/glad/: gl.h
shaders/: shader.frag
src/: application.cpp  main.cpp  shader.cpp
